<resources>
    <string name="app_name">ListApp</string>
    <string name="proyecto_dam">Proyecto_DAM</string>
    <string name="logo_aplicacion">Logo de la aplicacion</string>

    <!--       REGISTER      -->
    <string name="register_et_registrarse">Registrarse</string>
    <string name="register_et_usuario">Usuario</string>
    <string name="register_et_contrasena">Contraseña</string>
    <string name="register_et_cancelar">Cancelar</string>

    <!--       LOGIN      -->
    <string name="login_et_iniciar_sesion">Iniciar Sesion</string>
    <string name="login_et_usuario">Usuario</string>
    <string name="login_et_contrasena">Contraseña</string>
    <string name="login_et_recordar">Recordar</string>
    <string name="login_btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="login_et_registrate_ahora">Registrate ahora</string>
    <string name="login_et_cambiar_contraseña">He olvidado mi contraseña</string>
    <string name="login_et_no_tienes_cuenta">¿No tienes cuenta?</string>

    <!--       CAMBIAR CONTRASEÑA      -->
    <string name="cambiar_contraseña_et_enviar_correo_de_recuperaci_n">Enviar correo de recuperación</string>
    <string name="cambiar_contraseña_et_correo">Correo</string>
    <string name="cambiar_contraseña_et_correo_de_recuperaci_n_de_contrase_a">Correo de recuperación de contraseña</string>
    <string name="login_et_correo">Correo</string>
    <string name="register_et_correo">Correo</string>

    <!--       MENU      -->
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_configuracion">Configuración</string>
    <string name="title_cuenta">Cuenta</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_notificaciones">Notificaciones</string>

    <!--       Editar cuenta      -->
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="cuenta_fragment_et_usuario">Usuario</string>
    <string name="cuenta_fragment_et_email">Email</string>
    <string name="cuenta_fragment_et_boton_de_editar">Boton editar</string>
    <string name="cuenta_fragment_et_cerrar_sesion">Cerrar sesión</string>
    <string name="editar_perfil_et_usuario">Usuario</string>
    <string name="editar_perfil_et_email">Correo</string>
    <string name="editar_perfil_et_cancelar">Cancelar</string>
    <string name="editar_perfil_et_guardar">Guardar</string>
    <string name="editar_perfil_et_editar_perfil">Editar perfil</string>
    <string name="inicio_tv_mis_listas">Mis listas</string>
    <string name="item_lista_tv_elementos">1 elemento</string>
    <string name="item_lista_tv_titulo_lista">Titulo lista</string>
    <string name="inicio_btn_añadir_lista">Añadir lista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_crear_lista">CrearLista</string>
    <string name="crear_lista_et_titulo">Titulo de la lista</string>
    <string name="crearTarea_tv_nueva_lista">Nueva lista</string>
    <string name="crear_lista_et_descripcion">Descripción</string>
    <string name="crearTarea_btn_crear_lista">Crear lista</string>
    <string name="crearTarea_btn_cancelar">Cancelar</string>
    <string name="login_et_mantener_sesion">Mantener sesión iniciada</string>
    <string name="inicio_tv_listas_compartidas">Listas compartidas</string>
    <string name="menuColor_it_colorRojo">Rojo</string>
    <string name="menuColor_it_colorAzul">Azul</string>
    <string name="menuColor_it_colorVerde">Verde</string>
    <string name="menuColor_it_colorAmarillo">Amarillo</string>
    <string name="menuColor_it_colorNaranja">Naranja</string>
    <string name="item_vacio_tv_texto_ejemplo">Texto ejemplo</string>
    <string name="title_vista_lista">VistaLista</string>
    <string name="vista_lista_tv_titulo">Titulo</string>
    <string name="vista_lista_btn_compartir_lista">Compartir</string>
    <string name="vista_lista_btn_añadirProducto">Añadir producto</string>
    <string name="vista_lista_btn_eliminar_lista">Eliminar lista</string>
    <string name="dialog_email_correo_electronico">Correo electrónico</string>
    <string name="title_añadir_producto">AñadirProducto\n</string>
    <string name="title_crear_producto">CrearProducto</string>
    <string name="anadir_producto_tv_titulo">Productos</string>
    <string name="anadir_producto_btn_compartir_lista">Crear producto</string>
    <string name="anadir_producto_btn_añadirProducto">Añadir</string>
    <string name="crearTarea_btn_crear_producto">Guardar</string>
    <string name="crear_producto_et_descripcion">Descripción</string>
    <string name="crear_producto_et_titulo">Nombre</string>
    <string name="crearTarea_tv_nuevo_producto">Nuevo producto</string>
    <string name="crear_producto_et_precio">Precio</string>
    <string name="crear_producto_et_prioridad">Prioridad</string>
    <string name="crearTarea_btn_escanear_codigo">Escanear código</string>
    <string name="item_producto_tv_nombre_producto">Nombre producto</string>
    <string name="item_producto_tv_precio">0€</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="categor_a">Categoría</string>
    <string name="notificacion">Notificación</string>
    <string name="eliminar_notificacion">Eliminar</string>
    <string name="vista_lista_btn_opciones">Opciones</string>
    <string name="vista_lista_btn_completar_compra">Completar compra</string>
    <string name="marcar_como_le_do">Marcar como leído</string>
    <string name="title_editar_producto">EditarProducto</string>
    <string name="editar_producto">Editar producto</string>
    <string name="button_editar_producto_guardar">Guardar</string>
    <string name="button_editar_tarea_cancelar">Cancelar</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="mapa">Mapa</string>
    <string name="cerrar">Cerrar</string>
    <string name="color">Color</string>
    <string name="opciones">Opciones</string>
    <string name="crear_producto">Crear producto</string>
    <string name="compartir_lista">Compartir lista</string>
    <string name="eliminar_lista">Eliminar lista</string>
    <string name="email_incorrecto">Email incorrecto</string>
    <string name="categoria">Categoría</string>


</resources>