<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.example.proyecto_dam_aritz_ayensa.activities.ui.inicio.InicioFragment"

        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio">
        <action
            android:id="@+id/action_inicioFragment_to_crearListaFragment"
            app:destination="@id/navigation_crear_lista" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.proyecto_dam_aritz_ayensa.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notificaciones"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cuenta"
        android:name="com.example.proyecto_dam_aritz_ayensa.activities.ui.dashboard.CuentaFragment"
        android:label="@string/title_cuenta"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/navigation_crear_lista"
        android:name="com.example.proyecto_dam_aritz_ayensa.activities.CrearListaFragment"
        android:label="@string/title_crear_lista"
        tools:layout="@layout/fragment_crear_lista"
        >
        <action
            android:id="@+id/action_crearListaFragment_to_inicioFragment"
            app:destination="@id/navigation_inicio"
            app:popUpTo="@id/navigation_inicio"
            app:popUpToInclusive="false" />

    </fragment>


</navigation>