<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:elevation="4dp"
    tools:context=".activities.LoginActivity">

    <!-- Contenedor de Login -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_cl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Logo de la aplicación -->
        <ImageView
            android:id="@+id/login_iv_logoCalendar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/logo_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo_aplicacion" />

        <!-- Texto de Iniciar Sesión -->
        <TextView
            android:id="@+id/login_tv_textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_et_iniciar_sesion"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_iv_logoCalendar" />

        <!-- Editar Texto de Correo Electrónico -->
        <EditText
            android:id="@+id/login_et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/login_et_correo"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_tv_textLogin"
            android:autofillHints="" />

        <!-- Editar Texto de Contraseña -->
        <EditText
            android:id="@+id/login_et_contraUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/login_et_contrasena"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_et_usuario"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_et_contraUser">
            <CheckBox
                android:id="@+id/check_Remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_et_mantener_sesion"/>
        </LinearLayout>

        <!-- Bóton de Login en el que te lleva a la ventana Register -->
        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:onClick="goToMainDesdeLogin"
            android:text="@string/login_btn_iniciar_sesion"
            style="@style/ButtonAccept"
            app:layout_constraintTop_toBottomOf="@id/login_et_contraUser" />

        <!-- Texto de No tienes cuenta -->
        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_et_no_tienes_cuenta"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_bt_login" />

        <!-- Texto de Registrarte ahora -->
        <TextView
            android:id="@+id/login_tv_registerAhora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_et_registrate_ahora"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_register" />

        <TextView
            android:id="@+id/login_tv_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_et_cambiar_contraseña"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goToForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_registerAhora" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>