<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.dashboard.CuentaFragment">

    <!-- Imagen de perfil -->
    <TextView
        android:id="@+id/tv_fotoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto_de_perfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/perfil"
        android:contentDescription="@string/foto_de_perfil"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tv_fotoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Linea separadora -->
    <View
        android:id="@+id/lineaDivisoria"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/fotoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/negro"
        android:layout_margin="15dp" />

    <!-- Nombre de usuario -->
    <TextView
        android:id="@+id/tv_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuenta_fragment_et_usuario"
        app:layout_constraintTop_toBottomOf="@id/lineaDivisoria"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_Usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <!-- Correo del usuario -->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuenta_fragment_et_email"
        app:layout_constraintTop_toBottomOf="@id/nombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/correoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <!-- Botón Editar -->
    <ImageButton
        android:id="@+id/btnEditar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20sp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:src="@drawable/edit"
        android:background="@drawable/btn_circular"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCerrarSesion"
        android:contentDescription="@string/cuenta_fragment_et_boton_de_editar"
        />

    <!-- Botón Cerrar Sesión -->
    <Button
        android:id="@+id/btnCerrarSesion"
        style="@style/ButtonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:layout_marginTop="32dp"

        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/cuenta_fragment_et_cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>