<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginBottom="100sp"
    android:layout_marginTop="40sp"
    android:layout_marginStart="30sp"
    android:layout_marginEnd="30sp"
    tools:context=".activities.ui.inicio.InicioFragment">

    <TextView
        android:id="@+id/inicio_tv_mis_listas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_tv_mis_listas"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_mis_listas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inicio_tv_mis_listas" />

    <TextView
        android:id="@+id/inicio_tv_listas_compartidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio_tv_listas_compartidas"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_mis_listas"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_listas_compartidas"
        android:layout_width="match_parent"
        android:minHeight="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="50sp"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/inicio_tv_listas_compartidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnAnadirLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/inicio_btn_añadir_lista"
        style="@style/ButtonAccept"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>